@@ -1654,6 +1654,20 @@ test_that('CAR conjugacy checking new skipExpansionsNode system', {
     expect_true(all(round(as.numeric(Csamples[10,Rcolnames]),8) == expectedSamples))
 })
 
+test_that('checkConjugacy corner case when linear scale is identically zero', {
+    targetNode <- 'beta[4]'
+    linearityCheckExpr <- quote(beta[4] * 0 * alpha.smrcent[3])
+    conjugacyCheck <- nimble:::cc_checkLinearity(linearityCheckExpr, targetNode)
+    expect_identical(conjugacyCheck, list(offset = 0, scale = 0))
+    
+    targetNode <- 'beta[4]'
+    linearityCheckExpr <- quote(beta[1] + beta[2] * 0 + beta[3] * alpha.smrcent[3] + beta[4] * 0 * alpha.smrcent[3] + alpha.stream[1] + alpha.family[3, 1])
+    conjugacyCheck <- nimble:::cc_checkLinearity(linearityCheckExpr, targetNode)
+    expect_identical(conjugacyCheck,
+                     list(offset = quote(beta[1] + beta[2] * 0 + beta[3] * alpha.smrcent[3] + alpha.stream[1] + alpha.family[3, 1]),
+                          scale = 0))
+})
+
 
 sink(NULL)
 
