@@ -1,3 +1,10 @@
+
+USER LEVEL CHANGES
+
+BUG FIXES
+
+-- Fixed a bug in corner case of MCMC conjugacy checking system, when linear scale of target node is identically equal to zero.
+
                             CHANGES IN VERSION 0.8.0 (June 2019)
 USER LEVEL CHANGES
 
